--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@
     background-color:#643869;
     color: white;
  }
+.card-title{
+   color:black;
+   font-weight:800;
+   font-size:x-large;
+}
