--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,9 @@
    font-weight:800;
    font-size:x-large;
 }
+.big-card-text{
+   font-weight:600;
+   line-height: 2rem;
+   letter-spacing: 0.05rem;
+
+}
