--- a/src/index.css
+++ b/src/index.css
@@ -2,26 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* styles.css */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
- .max-container {
-     max-width: 1440px;
-     margin: 0 auto;
- }
 
- .Poppins{
-    font-family: "Poppins";
- }
- .text-violet{
-    background-color:#643869;
-    color: white;
- }
-.card-title{
-   color:black;
-   font-weight:800;
-   font-size:x-large;
+
+.max-container {
+   max-width: 1440px;
+   margin: 0 auto;
 }
-.big-card-text{
-   font-weight:600;
+
+.Poppins {
+   font-family: "Poppins";
+}
+
+.Montserrat {
+   font-family: 'Montserrat';
+}
+
+.text-violet {
+   background-color: #643869;
+   color: white;
+}
+
+.card-title {
+   color: black;
+   font-weight: 800;
+   font-size: x-large;
+}
+
+.big-card-text {
+   font-weight: 600;
    line-height: 2rem;
    letter-spacing: 0.05rem;
 
