--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 
-
+.all-screen{
+   
+}
 .max-container {
    max-width: 1440px;
    margin: 0 auto;
